[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.57"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true
