[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "v3"] }
byteorder = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
macros = { path = "../macros" }
nbt = { path = "../nbt" }
fastnbt = "2.5.0"
futures = "0.3.30"
